removed log4j, jlink now succeeds but error on launch